<?xml version="1.0"?>
<package format="3">
  <name>q1_turtlebot</name>
  <version>1.0.0</version>
  <description>TurtleBot3 + GrowSpace Q1 UWB — 실제 로봇 제어 패키지</description>
  <maintainer email="roboticsmaster@naver.com">SeongminJaden</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>q1_gateway_msgs</exec_depend>
  <exec_depend>q1_gateway</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
